Set correct version for maven-compiler

--- a/pom.xml
+++ b/pom.xml
@@ -148,7 +148,21 @@
 
 	<build>
 		<plugins>
-			<plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.15.0</version> <!-- Use the latest version -->
+                <configuration>
+                    <!-- Set source and target to Java 21 -->
+                    <source>21</source>
+                    <target>21</target>
+                </configuration>
+            </plugin>
+
+
+
+            <plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
